syntax = "proto3";

package tokenchain.core.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "tokenchain/core/v1/params.proto";
import "tokenchain/core/v1/user.proto";

option go_package = "tokenchain/x/core/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/tokenchain/core/v1/params";
  }

  // ListUser Queries a list of User items.
  rpc GetUser(QueryGetUserRequest) returns (QueryGetUserResponse) {
    option (google.api.http).get = "/tokenchain/core/v1/user/{index}";
  }

  // ListUser defines the ListUser RPC.
  rpc ListUser(QueryAllUserRequest) returns (QueryAllUserResponse) {
    option (google.api.http).get = "/tokenchain/core/v1/user";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetUserRequest defines the QueryGetUserRequest message.
message QueryGetUserRequest {
  string index = 1;
}

// QueryGetUserResponse defines the QueryGetUserResponse message.
message QueryGetUserResponse {
  User user = 1 [(gogoproto.nullable) = false];
}

// QueryAllUserRequest defines the QueryAllUserRequest message.
message QueryAllUserRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllUserResponse defines the QueryAllUserResponse message.
message QueryAllUserResponse {
  repeated User user = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
